<resources>
    <string name="app_name">DART Mobile</string>

    <string name="action_settings">Settings</string>

    <!-- Settings -->

    <string name="pref_server_settings">Server</string>
    <string name="pref_server_host_title">Host</string>
    <string name="pref_server_host_summary">The DNS name or IP address of the AMQP server used by DART.</string>
    <string name="pref_server_port_title">Port</string>
    <string name="pref_server_port_summary">The port of the AMQP server used by DART.</string>

    <string name="pref_identity">Identity</string>
    <string name="pref_identity_org_title">Organization</string>
    <string name="pref_identity_org_summary">The name of your organization, e.g. your fire department.</string>
    <string name="pref_identity_org_unit_title">Organizational Unit</string>
    <string name="pref_identity_org_unit_summary">The name of your organizational unit, e.g. your fire station or vehicle call sign.</string>
    <string name="pref_identity_device_id_title">Device ID</string>
    <string name="pref_identity_device_id_summary">A name that uniquely identifies this device, e.g. your phone number.</string>
    <string name="pref_identity_ssl_certificate_title">SSL Certificate</string>
    <string name="pref_identity_ssl_certificate_summary">Generate an SSL certificate for your device. You will need this to be able to communicate with the server.</string>

    <!-- Generate SSL Certificate -->

    <string name="act_certificate_title">Generate SSL Certificate</string>
    <string name="act_certificate_instructionText1_text">Press the button below to read the QR code generated by DART Certificate Manager.</string>
    <string name="act_certificate_readQRCodeButton_text">Read QR Code</string>
    <string name="act_certificate_instructionText2_text">You can also copy/paste or enter the code manually below.</string>
    <string name="act_certificate_csrToken_hint">Enter CSR token here</string>
    <string name="act_certificate_instructionText3_text">Finally, press this button to generate your certificate.</string>
    <string name="act_certificate_signCertificateButton_text">Sign Certificate</string>
</resources>
