<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_server_settings"
        android:key="pref_server_settings">
        <EditTextPreference
            android:title="@string/pref_server_host_title"
            android:summary="@string/pref_server_host_summary"
            android:key="pref_server_host"
            android:inputType="text"/>
        <EditTextPreference
            android:title="@string/pref_server_port_title"
            android:summary="@string/pref_server_port_summary"
            android:key="pref_server_port"
            android:inputType="number"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_identity"
        android:key="pref_identity">
        <EditTextPreference
            android:title="@string/pref_identity_org_title"
            android:summary="@string/pref_identity_org_summary"
            android:key="pref_identity_org"
            android:inputType="text"/>
        <EditTextPreference
            android:title="@string/pref_identity_org_unit_title"
            android:summary="@string/pref_identity_org_unit_summary"
            android:key="pref_identity_org_unit"
            android:inputType="text"/>
        <EditTextPreference
            android:title="@string/pref_identity_device_id_title"
            android:summary="@string/pref_identity_device_id_summary"
            android:key="pref_identity_device_id"
            android:inputType="text"/>
        <Preference
            android:title="@string/pref_identity_ssl_certificate_title"
            android:summary="@string/pref_identity_ssl_certificate_summary">
            <intent
                android:targetPackage="net.pkhapps.dart.mobile"
                android:targetClass="net.pkhapps.dart.mobile.CertificateActivity"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>