<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.pkhapps.dart.mobile.CertificateActivity"
    tools:showIn="@layout/activity_certificate">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_certificate_instructionText1_text"
        android:id="@+id/instructionText1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_certificate_readQRCodeButton_text"
        android:id="@+id/readQRCodeButton"
        android:layout_below="@+id/instructionText1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_certificate_instructionText2_text"
        android:id="@+id/instructionText2"
        android:layout_below="@+id/readQRCodeButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/csrToken"
        android:lines="1"
        android:hint="@string/act_certificate_csrToken_hint"
        android:layout_below="@+id/instructionText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/instructionText2"
        android:layout_alignEnd="@+id/instructionText2"
        android:singleLine="true"
        android:typeface="monospace" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_certificate_instructionText3_text"
        android:id="@+id/instructionText3"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/csrToken"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/csrToken"
        android:layout_alignEnd="@+id/csrToken" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_certificate_signCertificateButton_text"
        android:id="@+id/signCertificateButton"
        android:layout_below="@+id/instructionText3"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
